maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: Any does not take parameters
  val x = casee(0);
               ^ShortestPathMaze:23: error: Any does not take parameters
  var y = casee(1);
               ^ShortestPathMaze:28: error: not found: value setHeading
  setHeading(Direction.NORTH);
  ^ShortestPathMaze:34: error: not found: value setHeading
  setHeading(Direction.EAST);
  ^