maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  
  
  val sortie = findExit();
  marquerSol(sortie, 0);
//  parcourirPath();
  
}

val X = getWorldWidth();
val Y = getWorldHeight();

def findExit() : Any = {
  for(x <- 0 until X)
	  for(y <- 0 until Y)
  		if(hasBaggle(x,y))
  			return (x,y);
}

def marquerSol(casee: Any, numero:Int) {
  val x = casee(0);
  var y = casee(1);
  setPos(x,y);
  setIndication(x, y, numero);
  
  
  setHeading(Direction.NORTH);
  if(isFacingWall() && y > 0)
  	marquerSol((x,y-1), numero+1);
  if(isFacingWall() && y < Y-1)
  	marquerSol((x,y+1), numero+1);
  
  setHeading(Direction.EAST);
  if(isFacingWall() && x > 0)
  	marquerSol((x-1,y), numero+1);
  if(isFacingWall() && x < X-1)
  	marquerSol((x+1,y), numero+1);
  
}